# cloudvault

./: README.md  manage.py  requirements.txt
Demo/: settings.py
cloudvault/: README.md  README.rst  asgi.py  pyproject.toml  settings.py  setup.cfg  wsgi.py
cloudvault/cloudvault/: cloud_storage.py
test_app/: admin.py  models.py
test_app/migrations/: 0001_initial.py
