[metadata]
name = cloudvault
version = 1.1
description = A Django package for managing file uploads to cloud[Cloudinary]. It is an alternative for AWS S-3 Bucket.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/codewitgabi/cloudvault
author = Gabriel Michael Ojomakpene (codewitgabi)
author_email = codewitgabi222@gmail.vom
license = MIT-licence
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2
    cloudinary >= 1.33.0
